--- a/r1/src/App.scss
+++ b/r1/src/App.scss
@@ -50,6 +50,7 @@
         }
     }
     li {
+        position: relative;
         color: skyblue;
         background-color: darkgreen;
         &.big {
@@ -58,5 +59,24 @@
     }
     label {
         color: tomato;
+    }
+}
+
+.del-button {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    &::after {
+        content: '\2620';
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 30px;
+        height: 30px;
+        font-size: 20px;
+        border-radius: 50%;
+        background-color: crimson;
+        color: white;
+        cursor: pointer;
     }
 }
