--- a/pirmas/resources/sass/app.scss
+++ b/pirmas/resources/sass/app.scss
@@ -17,6 +17,12 @@
             padding: 0 5px;
             color: orangered;
         }
+        .clients-count {
+            font-weight: bold;
+            padding: 0 5px;
+            color: darkorchid;
+            line-height: 3em;
+        }
         span {
             color: crimson;
             font-weight: bold;
