--- a/color-store/resources/front/sass/app.scss
+++ b/color-store/resources/front/sass/app.scss
@@ -70,7 +70,8 @@
 }
 
 .buy {
-    section {
+    section,
+    form {
         display: flex;
         align-items: center;
         gap: 15px;
@@ -84,6 +85,17 @@
     }
 }
 
+.product-line .product-info .buy.cart {
+    display: flex;
+    align-items: flex-end;
+    color: skyblue;
+    font-family: $z;
+    font-size: 30px;
+    padding: 10px 20px;
+    flex-direction: row;
+    gap: 10px;
+}
+
 .nav-item {
     .top-cart {
         display: flex;
@@ -92,12 +104,19 @@
             height: 40px;
             width: 40px;
             fill: crimson;
+            transition: all 0.25s;
+            &:hover {
+                fill: skyblue;
+            }
         }
         .cart-info {
             display: flex;
             height: 100%;
             align-items: center;
+            justify-content: flex-end;
             gap: 5px;
+            transition: all 0.6s;
+            width: 140px;
             .count {
                 width: 30px;
                 height: 30px;
