--- a/color-store/resources/back/sass/app.scss
+++ b/color-store/resources/back/sass/app.scss
@@ -169,3 +169,10 @@ span.rem {
     width: 30px;
     height: 30px;
 }
+
+.gallery {
+    img {
+        width: 300px;
+        height: auto;
+    }
+}
