--- a/color-store/resources/front/sass/app.scss
+++ b/color-store/resources/front/sass/app.scss
@@ -248,10 +248,20 @@
         color: skyblue;
         padding: 0 7px;
         font-size: 20px;
+        position: relative;
         &::before {
             content: '#';
             font-weight: bold;
             font-size: 30px;
+        }
+        &::after {
+            content: '\2573';
+            position: relative;
+            top: -4px;
+            font-size: 10px;
+            color: gray;
+            padding: 0 0 0 5px;
+            cursor: pointer;
         }
     }
     .add {
@@ -290,8 +300,8 @@
                 }
             }
         }
-        input:focus+.list {
-            display: block;
-        }
+        // input:focus+.list {
+        //     display: block;
+        // }
     }
 }
