--- a/color-store/resources/front/sass/app.scss
+++ b/color-store/resources/front/sass/app.scss
@@ -254,14 +254,17 @@
             font-weight: bold;
             font-size: 30px;
         }
-        &::after {
-            content: '\2573';
-            position: relative;
-            top: -4px;
-            font-size: 10px;
-            color: gray;
-            padding: 0 0 0 5px;
-            cursor: pointer;
+        i {
+            &::after {
+                content: '\2573';
+                position: relative;
+                top: -4px;
+                font-size: 10px;
+                color: gray;
+                padding: 0 0 0 5px;
+                cursor: pointer;
+                font-style: normal;
+            }
         }
     }
     .add {
@@ -300,8 +303,8 @@
                 }
             }
         }
-        // input:focus+.list {
-        //     display: block;
-        // }
+        .btn-info {
+            margin-left: 20px;
+        }
     }
 }
